--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,11 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+        <a href="https://iquevedom.github.io/Psychic-Game/">
+        <img src="assets/images/Guess_the_letter.jpg" alt="Guess the Letter">
+      </a>
 
-        <h3>Word Guess</h3>
+   <!--      <h3>Word Guess</h3> -->
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
